updated to support writing public skins